Done with static pages

--- a/app/views/documentation/contact.html.erb
+++ b/app/views/documentation/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Documentation#contact</h1>
-<p>Find me in app/views/documentation/contact.html.erb</p>
+<h1>Contact</h1>
+<p>
+  Contact: makampf@gmail.com
+</p>
