--- a/app/views/documentation/home.html.erb
+++ b/app/views/documentation/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Documentation#home</h1>
-<p>Find me in app/views/documentation/home.html.erb</p>
+<h1>Medical Documentation App</h1>
+<p>
+  This is the home page for a sample Medical Documentation App
+</p>
